# lcp

./: .dockerignore  .gitignore  Cargo.toml  ImportRustSGXSDK.mk  Makefile  README.md  azure-pipelines.yml  go.mod  go.sum  rust-toolchain
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: Cargo.toml  build.rs
app/src/: cli.rs  commands.rs  enclave.rs  main.rs  ocalls.rs  opts.rs
app/src/commands/: attestation.rs  elc.rs  enclave.rs  service.rs
enclave/: .gitignore  Cargo.toml  Enclave.config.xml  Enclave.edl
enclave-modules/: Cargo.toml
enclave-modules/crypto/: Cargo.toml
enclave-modules/crypto/src/: consts.rs  errors.rs  key_manager.rs  lib.rs  rand.rs  rng.rs  secp256k1.rs  traits.rs
enclave-modules/ecall-handler/: Cargo.toml
enclave-modules/ecall-handler/src/: errors.rs  lib.rs  router.rs
enclave-modules/ecall-handler/src/enclave_manage/: attestation.rs  enclave.rs  errors.rs  ias.rs  init_enclave.rs  mod.rs  report.rs  router.rs
enclave-modules/ecall-handler/src/light_client/: aggregate_messages.rs  errors.rs  init_client.rs  mod.rs  query.rs  registry.rs  router.rs  update_client.rs  verify_state.rs
enclave-modules/environment/: Cargo.toml
enclave-modules/environment/src/: environment.rs  environment_impl.rs  lib.rs
enclave-modules/handler/: Cargo.toml
enclave-modules/handler/src/: context.rs  errors.rs  lib.rs  router.rs
enclave-modules/handler/src/enclave_manage/: errors.rs  init_enclave.rs  mod.rs  router.rs
enclave-modules/handler/src/light_client/: errors.rs  init_client.rs  mod.rs  router.rs  update_client.rs  verify_channel.rs  verify_client.rs  verify_client_consensus.rs  verify_connection.rs
enclave-modules/host-api/: Cargo.toml
enclave-modules/host-api/src/: api.rs  errors.rs  ffi.rs  lib.rs  remote_attestation.rs  store.rs
enclave-modules/light-client/: Cargo.toml
enclave-modules/light-client/src/: client.rs  errors.rs  lib.rs  registry.rs  utils.rs
enclave-modules/remote-attestation/: Cargo.toml
enclave-modules/remote-attestation/src/: attestation.rs  errors.rs  lib.rs  ocalls.rs  report.rs  simulate.rs
enclave-modules/runtime/: Cargo.toml
enclave-modules/runtime/src/: ecalls.rs  errors.rs  key_manager.rs  lib.rs  light_client.rs  store.rs
enclave-modules/store/: Cargo.toml
enclave-modules/store/src/: commit.rs  errors.rs  lib.rs  memory.rs  store.rs
enclave-modules/tendermint/: Cargo.toml
enclave-modules/tendermint/src/: client.rs  errors.rs  lib.rs
enclave-modules/utils/: Cargo.toml
enclave-modules/utils/src/: lib.rs  macros.rs  pointers.rs  storage.rs
enclave/src/: lib.rs
go/: Makefile  README.md  go.mod  go.sum
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
modules/attestation-report/: Cargo.toml
modules/attestation-report/src/: dcap.rs  errors.rs  ias.rs  lib.rs  report.rs  verification.rs
modules/commitments/: Cargo.toml
modules/commitments/src/: commitment.rs  context.rs  encoder.rs  errors.rs  lib.rs  message.rs  proof.rs  prover.rs  state.rs  types.rs
modules/commitments/src/message/: misbehaviour.rs  update_client.rs  update_state.rs  verify_membership.rs
modules/context/: Cargo.toml
modules/context/src/: client.rs  context.rs  lib.rs
modules/crypto/: Cargo.toml
modules/crypto/src/: errors.rs  key.rs  key_manager.rs  lib.rs  secp256k1.rs  traits.rs
modules/crypto/src/sgx/: errors.rs  key_manager.rs  mod.rs  rand.rs  sealing.rs
modules/dcap-qvl/: Cargo.toml  LICENSE  README.md
modules/dcap-qvl/sample/: tdx_quote  tdx_quote_collateral
modules/dcap-qvl/src/: collateral.rs  constants.rs  lib.rs  quote.rs  utils.rs  verify.rs
modules/dcap-qvl/tests/: verify_quote.rs
modules/dcap-qvl/tests/snapshots/: verify_quote__could_parse_sgx_quote.snap  verify_quote__could_parse_tdx_quote.snap
modules/ecall-commands/: Cargo.toml
modules/ecall-commands/src/: commands.rs  enclave_manage.rs  errors.rs  lib.rs  light_client.rs  msgs.rs  transmuter.rs
modules/ecall-handler/: Cargo.toml
modules/ecall-handler/src/: lib.rs  router.rs
modules/ecall-handler/src/enclave_manage/: errors.rs  ias.rs  init_enclave.rs  router.rs
modules/ecall-handler/src/light_client/: init_client.rs  mod.rs  registry.rs  router.rs  verify_state.rs
modules/enclave-api/: Cargo.toml  build.rs
modules/enclave-api/src/: api.rs  enclave.rs  errors.rs  ffi.rs  lib.rs  memory.rs  rocksdb.rs
modules/enclave-api/src/api/: command.rs  primitive.rs  proto.rs
modules/enclave-commands/: Cargo.toml
modules/enclave-commands/src/: enclave_manage.rs  errors.rs  lib.rs  light_client.rs
modules/handler/: Cargo.toml
modules/handler/src/: errors.rs  lib.rs  router.rs
modules/handler/src/enclave_manage/: errors.rs  ias.rs  init_enclave.rs  mod.rs  router.rs
modules/handler/src/light_client/: errors.rs  init_client.rs  mod.rs  query.rs  registry.rs  router.rs  update_client.rs  verify_channel.rs  verify_client.rs  verify_client_consensus.rs  verify_connection.rs  verify_state.rs
modules/host/: Cargo.toml  build.rs
modules/host/src/: enclave.rs  lib.rs  ocalls.rs
modules/ibc-client/: Cargo.toml  README.md
modules/ibc-client/src/: client.rs  client_def.rs  client_state.rs  consensus_state.rs  crypto.rs  errors.rs  header.rs  lib.rs  message.rs  public_key.rs  report.rs
modules/ibc-client/src/tests/: client.rs  errors.rs  mod.rs
modules/keymanager/: Cargo.toml
modules/keymanager/src/: errors.rs  lib.rs
proto/: Cargo.toml
proto-compiler/: Cargo.toml  README.md
proto/definitions/ibc/lightclients/lcp/v1/: lcp.proto
proto/definitions/lcp/service/elc/v1/: query.proto  tx.proto
proto/definitions/lcp/service/enclave/v1/: query.proto
proto/definitions/lcp/service/ibc/v1/: tx.proto
proto/src/: google.rs  ibc_msg.rs  lib.rs
proto/src/prost/: cosmos.upgrade.v1beta1.rs  google.protobuf.rs  ibc.core.channel.v1.rs  ibc.core.client.v1.rs  ibc.core.commitment.v1.rs  ibc.core.connection.v1.rs  ibc.lightclients.lcp.v1.rs  lcp.service.elc.v1.rs  lcp.service.enclave.v1.rs  lcp.service.ibc.v1.rs
rust-sgx-sdk/: version
tests/: Makefile
(+259 files in other folders)
