[workspace]
resolver = "2"
members = [
    "app",
    "modules/host",
    "modules/host-environment",
    "modules/types",
    "modules/ocall-handler",
    "modules/attestation-report",
    "modules/enclave-api",
    "modules/ecall-commands",
    "modules/ocall-commands",
    "modules/commitments",
    "modules/context",
    "modules/crypto",
    "modules/store",
    "modules/settings",
    "modules/ibc-client",
    "modules/validation-context",
    "modules/light-client",
    "modules/light-client-registry",
    "modules/tendermint-lc",
    "modules/mock-lc",
    "modules/service",
    "modules/relay/tendermint",
    "proto",
    "tests/integration",
    "tools/nodes-runner"
]
exclude = [
    "enclave",
    "enclave-modules/runtime",
    "enclave-modules/environment",
    "enclave-modules/store",
    "enclave-modules/utils",
    "enclave-modules/remote-attestation",
    "enclave-modules/host-api",
    "enclave-modules/ecall-handler",
    "proto-compiler"
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_urts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tse = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_alloc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_libc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive_internals = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}

[patch."crates-io"]
parking_lot = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
parking_lot_core = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
lock_api = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
