[workspace]
resolver = "2"
members = [
    "app",
    "modules/host",
    "modules/host-environment",
    "modules/types",
    "modules/ocall-handler",
    "modules/attestation-report",
    "modules/enclave-api",
    "modules/ecall-commands",
    "modules/ocall-commands",
    "modules/commitments",
    "modules/context",
    "modules/crypto",
    "modules/store",
    "modules/settings",
    "modules/ibc-client",
    "modules/validation-context",
    "modules/light-client",
    "modules/light-client-registry",
    "modules/tendermint-lc",
    "modules/mock-lc",
    "modules/service",
    "modules/relay/tendermint",
    "proto",
    "tests/integration",
    "tools/nodes-runner"
]
exclude = [
    "enclave",
    "enclave-modules/runtime",
    "enclave-modules/environment",
    "enclave-modules/store",
    "enclave-modules/utils",
    "enclave-modules/remote-attestation",
    "enclave-modules/host-api",
    "enclave-modules/ecall-handler",
    "proto-compiler"
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_alloc = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_libc = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive_internals = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto_helper = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_crypto_helper = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[patch."crates-io"]
parking_lot = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
parking_lot_core = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
lock_api = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
