[workspace]
resolver = "2"
members = [
    "app",
    "modules/host",
    "modules/host-environment",
    "modules/types",
    "modules/ocall-handler",
    "modules/attestation-report",
    "modules/remote-attestation",
    "modules/enclave-api",
    "modules/ecall-commands",
    "modules/ocall-commands",
    "modules/commitments",
    "modules/context",
    "modules/crypto",
    "modules/keymanager",
    "modules/store",
    "modules/lcp-client",
    "modules/light-client",
    "modules/tendermint-lc",
    "modules/mock-lc",
    "modules/service",
    "modules/zkvm",
    "proto",
    "tests/integration",
    "tools/nodes-runner",
]
exclude = [
    "enclave",
    "enclave-modules",
    "methods",
    "proto-compiler"
]
