[package]
name = "lcp"
version = "0.0.1"
edition = "2021"
build = "build.rs"
description  = """
    LCP(Light Client Proxy) is a proxy middleware for light client verification
"""

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0.56" }
clap = { version = "3.2", features = ["derive"] }
dirs = "4.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }
rsa = { version = "0.9.2", features = ["pem"], optional = true }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"], optional = true }

host = { path = "../modules/host" }
host-environment = { path = "../modules/host-environment" }
service = { path = "../modules/service" }
enclave-api = { path = "../modules/enclave-api" }
ecall-commands = { path = "../modules/ecall-commands" }
settings = { path = "../modules/settings" }
attestation-report = { path = "../modules/attestation-report" }
store = { path = "../modules/store", features = ["rocksdbstore"] }

[features]
default = []
sgx-sw = [
    "rsa",
    "sha2",
    "enclave-api/sgx-sw",
    "ecall-commands/sgx-sw",
    "service/sgx-sw"
]
