[package]
name = "lcp"
version = "0.0.1"
edition = "2021"
build = "build.rs"
description  = """
    LCP(Light Client Proxy) is a proxy middleware for light client verification
"""

[dependencies]
log = "0.4.8"
env_logger = "0.11.5"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0.56" }
clap = { version = "4.5.21", features = ["derive"] }
dirs = "4.0"
serde = { version = "1.0.184", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }

lcp-types = { path = "../modules/types" }
host = { path = "../modules/host", features = ["rocksdb"] }
enclave-api = { path = "../modules/enclave-api", features = ["rocksdb"] }
service = { path = "../modules/service" }
ecall-commands = { path = "../modules/ecall-commands" }
crypto = { path = "../modules/crypto" }
keymanager = { path = "../modules/keymanager" }
remote-attestation = { path = "../modules/remote-attestation" }
attestation-report = { path = "../modules/attestation-report" }
zkdcap-risc0 = { git = "https://github.com/datachainlab/zkdcap", rev = "1c52677de65c389d95d93359c9740cca9b3ec03f" }

[build-dependencies]
git2 = { version = "0.20", default-features = false }

[features]
default = []
cuda = [
    "remote-attestation/cuda"
]
sgx-sw = [
    "remote-attestation/sgx-sw"
]
