[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { version = "0.4.0" }
risc0-build = { version = "=1.1.3", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.3" }
risc0-zkp = { version = "=1.1.3", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "=0.8.12", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.12" }
risc0-zkvm = { version = "=1.1.3", features = ["client"] }
hex = { version = "0.4.0" }
