[package]
name         = "lcp-proto"
edition      = "2021"
version = "0.1.0"

[lib]
name = "lcp_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { version = "0.11", default-features = false }
tonic       = { version = "0.9", optional = true, default-features = false }
serde       = { version = "1.0", default-features = false }
schemars    = { version = "0.8", optional = true }
ibc-proto   = { version = "0.26.0", default-features = false }

[features]
default     = ["std", "client"]
std         = []
client      = ["std", "tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
json-schema = ["std", "schemars"]
server      = ["std", "tonic", "tonic/codegen", "tonic/transport", "tonic/prost"]
