[package]
name = "enclave_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
anyhow = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
libsecp256k1 = { rev = "sgx_1.1.3-patch", git = "https://github.com/bluele/libsecp256k1-rs-sgx" }
tiny-keccak = "1.4"
log = "0.4.8"

settings = { path = "../../modules/settings", default-features = false, features = ["sgx"] }
