[package]
name = "ecall-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
flex-error = { version = "0.4.4", default-features = false }

crypto = { path = "../../modules/crypto", default-features = false, features = ["sgx"] }
attestation-report = { path = "../../modules/attestation-report", default-features = false }
context = { path = "../../modules/context", default-features = false }
enclave-environment = { path = "../environment", default-features = false }

lcp-types = { path = "../../modules/types", default-features = false }
ecall-commands = { path = "../../modules/ecall-commands", default-features = false }
light-client = { path = "../../modules/light-client", default-features = false }
store = { path = "../../modules/store", default-features = false }
