[package]
name = "enclave-environment"
version = "0.1.0"
edition = "2021"

[dependencies]
light-client = { path = "../../modules/light-client", default-features = false }
store = { path = "../../modules/store", default-features = false }
enclave-store = { path = "../store", optional = true }

[features]
default = ["environment_impl"]
environment_impl = ["enclave-store"]
