[package]
name = "enclave-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

ibc = {git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
prost-types = { version = "0.9", default-features = false }

serde = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
bincode = { git = "https://github.com/bluele/bincode-sgx", branch = "serde" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

enclave_crypto = { path = "../crypto" }
enclave_utils = { path = "../utils" }
enclave-store = { path = "../store" }
enclave-light-client = { path = "../light-client" }
enclave-remote-attestation = { path = "../remote-attestation" }

settings = { path = "../../modules/settings", default-features = false, features = ["sgx"] }
enclave-commands = { path = "../../modules/enclave-commands", default-features = false, features = ["sgx"] }
commitments = { path = "../../modules/commitments", default-features = false, features = ["sgx"] }
attestation-report = { path = "../../modules/attestation-report", default-features = false, features = ["sgx"] }