[package]
name = "host-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }
flex-error = { version = "0.4.4", default-features = false }
ocall-commands = { path = "../../modules/ocall-commands", default-features = false }
store = { path = "../../modules/store", default-features = false }

[dev-dependencies]
tempfile = "3"
host = { path = "../../modules/host", default-features = false, features = ["test"] }
enclave-api = { path = "../../modules/enclave-api", default-features = false }
