[package]
name = "enclave-light-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
anyhow = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
ibc = {git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
sha2 = { version = "0.8", default-features = false }
log = "0.4.8"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }

enclave-commands = { path = "../../modules/enclave-commands", default-features = false, features = ["sgx"] }
commitments = { path = "../../modules/commitments", default-features = false, features = ["sgx"] }