[package]
name = "enclave-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
log = { version = "0.4.8", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
bincode = { git = "https://github.com/bluele/bincode-sgx", branch = "serde" }
flex-error = { version = "0.4.4", default-features = false }
once_cell = { version = "1.15.0", default-features = false, features = ["alloc"] }

enclave-utils = { path = "../utils" }
enclave-store = { path = "../store" }
ecall-handler = { path = "../ecall-handler" }
enclave-environment = { path = "../environment" }
store = { path = "../../modules/store", default-features = false, features = ["sgx"] }
crypto = { path = "../../modules/crypto", default-features = false, features = ["sgx"] }
light-client-registry = { path = "../../modules/light-client-registry", default-features = false, features = ["sgx"] }

ecall-commands = { path = "../../modules/ecall-commands", default-features = false }
