[package]
name = "enclave-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
log = { version = "0.4.8", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
bincode = { git = "https://github.com/bluele/bincode-sgx", branch = "serde" }
flex-error = { version = "0.4.4", default-features = false }
once_cell = { version = "1.15.0", default-features = false, features = ["alloc"] }

enclave-utils = { path = "../utils" }
enclave-store = { path = "../store" }
ecall-handler = { path = "../ecall-handler" }
enclave-environment = { path = "../environment" }
crypto = { path = "../../modules/crypto", default-features = false, features = ["sgx"] }
light-client-registry = { path = "../../modules/light-client-registry", default-features = false, features = ["sgx"] }

store = { path = "../../modules/store", default-features = false }
ecall-commands = { path = "../../modules/ecall-commands", default-features = false }

[features]
sgx-sw = [
    "ecall-handler/sgx-sw",
    "ecall-commands/sgx-sw"
]
