[package]
name = "enclave-store"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
anyhow = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { git = "https://github.com/bluele/bincode-sgx", branch = "serde" }
enclave_utils = { path = "../utils" }
enclave_crypto = { path = "../crypto" }
settings = { path = "../../modules/settings", default-features = false, features = ["sgx"] }
sha2 = { version = "0.8", default-features = false }
log = "0.4.8"