[package]
name = "enclave-tendermint"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
ibc = { git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
ibc-proto = { git = "https://github.com/bluele/ibc-rs", branch = "sgx", default-features = false }
tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", rev = "235480171081fed74de7b3d3c19911304df29831", default-features = false }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "235480171081fed74de7b3d3c19911304df29831", default-features = false }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
sha2 = { version = "0.8", default-features = false }
time = { version = "0.3", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
anyhow = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4.8"

enclave-light-client = { path = "../light-client" }
commitments = { path = "../../modules/commitments", default-features = false, features = ["sgx"] }